Float no longer deprecated version
Observer is still deprecated, however, I feel like editing it would change the original code supplied too much.